--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
 	</div>
 	<div class="footer">
 		<div class="footer-item footer-item-active">
-		a<img src="img/1_23.png"/>
+		<img src="img/1_23.png"/>
 		<span>订阅</span></div>
 		<div class="footer-item">
-			<a href="pos.html">a<img src="img/1_25.png"/></a>
+			<a href="pos.html"><img src="img/1_25.png"/></a>
 			<a href="pos.html"><span>推荐</span></a>
 			</div>
 		<div class="footer-item">
-		a<img src="img/1_28.png"/>
+		<img src="img/1_28.png"/>
 		<span>话题</span></div>
 		<div class="footer-item">
-			a<img src="img/1_30.png"/>
+			<img src="img/1_30.png"/>
 			<span>我的</span></div>
 	</div>
 </body>
