--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </head>
 <body>
 	<div class="header">
-		<div class="header-item">获取天气</div>
+		<div class="header-item" style="font-size: 0.26rem;">获取天气</div>
 		<div class="header-item">订阅</div>
-		<div class="header-item">+</div>
+		<div class="header-item iconfont">&#xe606;</div>
 	</div>
 	<div class="swiper-container">
     	<div class="swiper-wrapper">
@@ -39,44 +39,44 @@
 	<div class="main">
 		<div class="main-box">
 			<div class="item">
-				<a href="pos.html"><img src="img/1_03.png" alt="" /></a>
+				<a href="pos.html"><img src="img/今日.png" alt="" /></a>
 				<span>今日看点</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/1_05.png" alt="" /></a><span>头条热点</span></div>
+				<a href="pos.html"><img src="img/头条.png" alt="" /></a><span>头条热点</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/1_07.png" alt="" /></a><span>娱乐八卦</span></div>
+				<a href="pos.html"><img src="img/娱乐八卦.png" alt="" /></a><span>娱乐八卦</span></div>
 		</div>
 		<div class="main-box">
 			<div class="item">
-				<a href="pos.html"><img src="img/1_12.png" alt="" /></a><span>科技频道</span></div>
+				<a href="pos.html"><img src="img/科技.png" alt="" /></a><span>科技频道</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/1_19.gif" alt="" /></a><span>旅游频道</span></div>
+				<a href="pos.html"><img src="img/汽车.png" alt="" /></a><span>汽车频道</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/1_13.png"/></a><span>体育频道</span></div>
+				<a href="pos.html"><img src="img/跑步.png"/></a><span>体育频道</span></div>
 		</div>
 				<div class="main-box">
 			<div class="item">
-				<a href="pos.html"><img src="img/1_03.png" alt="" /></a>
-				<span>今日看点</span></div>
+				<a href="pos.html"><img src="img/电影 (1).png" alt="" /></a>
+				<span>电影资讯</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/1_05.png" alt="" /></a><span>头条热点</span></div>
+				<a href="pos.html"><img src="img/美妆.png" alt="" /></a><span>时尚频道</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/1_07.png" alt="" /></a><span>娱乐八卦</span></div>
+				<a href="pos.html"><img src="img/美食.png" alt="" /></a><span>美食频道</span></div>
 		</div>
 	</div>
 	<div class="footer">
 		<div class="footer-item footer-item-active">
-		<img src="img/1_23.png"/>
+		<img src="img/订阅.png"/>
 		<span>订阅</span></div>
 		<div class="footer-item">
-			<a href="pos.html"><img src="img/1_25.png"/></a>
+			<a href="pos.html"><img src="img/推荐 (2).png"/></a>
 			<a href="pos.html"><span>推荐</span></a>
 			</div>
 		<div class="footer-item">
-		<img src="img/1_28.png"/>
+		<img src="img/社区.png"/>
 		<span>话题</span></div>
 		<div class="footer-item">
-			<img src="img/1_30.png"/>
+			<img src="img/我的 (1).png"/>
 			<span>我的</span></div>
 	</div>
 </body>
