--- a/pos.html
+++ b/pos.html
@@ -16,7 +16,8 @@
 	<div class="header">
 		<div class="header-item"></div>
 		<div class="header-item">推荐</div>
-		<div class="header-item"></div>
+		<div class="header-item iconfont">&#xe606;
+		</div>
 	</div>
 	<div class="main-con">
 		<div class="list">
@@ -33,10 +34,12 @@
 		<div class="list">
 			<a href="show.html"><h2>什么环境中孩子智商较高？</h2></a>
 			<h3>凤凰亲子</h3>
+			<div class="img-box">
 			<a href="" class="item-img"><img src="img/01.jpg" alt="" /></a>
 			<a href="" class="item-img"><img src="img/003.jpg" alt="" /></a>
 			<a href="" class="item-img"><img src="img/004.jpg" alt="" /></a>
-		</div>
+			</div>
+			</div>
 		<div class="list">
 			<a href="show.html"><h2>什么环境中孩子智商较高？</h2></a>
 			<h3>凤凰亲子</h3>
@@ -51,23 +54,28 @@
 		<div class="list">
 			<a href="show.html"><h2>什么环境中孩子智商较高？</h2></a>
 			<h3>凤凰亲子</h3>
-			<a href="" class="item-img"><img src="img/01.jpg" alt="" /></a>
-			<a href="" class="item-img"><img src="img/003.jpg" alt="" /></a>
-			<a href="" class="item-img"><img src="img/004.jpg" alt="" /></a>
+			<div class="img-box">
+				<a href="" class="item-img"><img src="img/01.jpg" alt="" /></a>
+				<a href="" class="item-img"><img src="img/003.jpg" alt="" /></a>
+				<a href="" class="item-img"><img src="img/004.jpg" alt="" /></a>
+			</div>
+			
 		</div>
 	</div>
 	<div class="footer">
 		<div class="footer-item">
-		<a href="index.html"><img src="img/2_03.png"/></a>
-		<a href="index.html"><span>订阅</span></a></div>
+			<a href="index.html"><img src="img/订阅 (1).png"/></a>
+			<a href="index.html"><span>订阅</span></a><
+		</div>
 		<div class="footer-item footer-item-active">
-			<img src="img/2_06.png"/>
-			<span>推荐</span></div>
+			<a href="pos.html"><img src="img/推荐 (1).png"/></a>
+			<a href="pos.html"><span>推荐</span></a>
+			</div>
 		<div class="footer-item">
-		<img src="img/1_28.png"/>
+		<img src="img/社区.png"/>
 		<span>话题</span></div>
 		<div class="footer-item">
-			<img src="img/1_30.png"/>
+			<img src="img/我的 (1).png"/>
 			<span>我的</span></div>
 	</div>
 </body>
