--- a/show.html
+++ b/show.html
@@ -14,9 +14,9 @@
 </head>
 <body>
 	<div class="header">
-		<div class="header-item" ><a href="pos.html" style="font-size: 0.5rem;font-weight: bold;font-family: '宋体';color: inherit;fff"><</a></div>
+		<div class="header-item iconfont" ><a href="pos.html" style="color: #FFFFFF;">&#xe604;</a></div>
 		<div class="header-item"></div>
-		<div class="header-item" style="font-size: 0.5rem;font-weight: bold;font-family: '宋体';position: relative;"><img src="img/share.png" alt="" style="position: absolute;width: 0.8rem;top:0.1rem;right: 1rem;"/>…</div>
+		<div class="header-item iconfont"><span>&#xe62e;</span><span>&#xe625;</span></div>
 	</div>
 	<div class="main-con" style="padding: 0.3rem;">
 	<h1>习近平同独杜特尔特会谈：把分歧管控好把合作谈起来</h1>
