--- a/play.html
+++ b/play.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no, email=no" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-	<meta name="x5-fullscreen" content="true" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"><meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="x5-fullscreen" content="true" />
 	<meta name="full-screen" content="yes">
 	<meta name="x5-orientation" content="portrait" />
 	<meta name="screen-orientation" content="portrait"> 
@@ -18,9 +18,10 @@
 </head>
 <body>
 	<div class="header">
-		<div class="header-item" style="font-size: 0.26rem;">获取天气</div>
-		<div class="header-item">订阅</div>
-		<div class="header-item iconfont">&#xe606;</div>
+		<div class="header-item"></div>
+		<div class="header-item">玩乐</div>
+		<div class="header-item iconfont">&#xe606;
+		</div>
 	</div>
 	<div class="swiper-container">
     	<div class="swiper-wrapper">
@@ -40,44 +41,47 @@
     <!-- 如果需要分页器 -->
     	<div class="swiper-pagination"></div>
 	</div>
-	<div class="main">
-		<div class="main-box">
-			<div class="item">
-				<a href="pos.html"><img src="img/今日.png" alt="" /></a>
-				<span>今日看点</span></div>
-			<div class="item">
-				<a href="pos.html"><img src="img/头条.png" alt="" /></a><span>头条热点</span></div>
-			<div class="item">
-				<a href="pos.html"><img src="img/娱乐八卦.png" alt="" /></a><span>娱乐八卦</span></div>
+	<div class="main-con" style="margin-top:0">
+		<div class="img-list">
+			<img src="img/01.jpg"/>
+				<a href="">
+					<div class="title">
+					<h1>买不起房的年轻人呀</h1>
+					<h2>我想把这部剧安利你</h2>
+				</div>
+				</a>
+				
 		</div>
-		<div class="main-box">
-			<div class="item">
-				<a href="pos.html"><img src="img/科技.png" alt="" /></a><span>科技频道</span></div>
-			<div class="item">
-				<a href="pos.html"><img src="img/汽车.png" alt="" /></a><span>汽车频道</span></div>
-			<div class="item">
-				<a href="pos.html"><img src="img/跑步.png"/></a><span>体育频道</span></div>
+		<div class="img-list">
+			<img src="img/01.jpg"/>
+			<a href="">
+					<div class="title">
+					<h1>买不起房的年轻人呀</h1>
+					<h2>我想把这部剧安利你</h2>
+				</div>
+				</a>
 		</div>
-				<div class="main-box">
-			<div class="item">
-				<a href="pos.html"><img src="img/电影 (1).png" alt="" /></a>
-				<span>电影资讯</span></div>
-			<div class="item">
-				<a href="pos.html"><img src="img/美妆.png" alt="" /></a><span>时尚频道</span></div>
-			<div class="item">
-				<a href="pos.html"><img src="img/美食.png" alt="" /></a><span>美食频道</span></div>
-		</div> 
+		<div class="img-list">
+			<img src="img/01.jpg"/>
+			<a href="">
+					<div class="title">
+					<h1>买不起房的年轻人呀</h1>
+					<h2>我想把这部剧安利你</h2>
+				</div>
+				</a>
+		</div>
 	</div>
 	<div class="footer">
-		<div class="footer-item footer-item-active">
-		<img src="img/订阅.png"/>
-		<span>订阅</span></div>
+		<div class="footer-item">
+			<a href="index.html"><img src="img/订阅 (1).png"/></a>
+			<a href="index.html"><span>订阅</span></a><
+		</div>
 		<div class="footer-item">
 			<a href="pos.html"><img src="img/推荐 (2).png"/></a>
 			<a href="pos.html"><span>推荐</span></a>
 			</div>
-		<div class="footer-item">
-			<a href="play.html"><img src="img/社区.png"/></a>
+		<div class="footer-item footer-item-active">
+			<a href="play.html"><img src="img/社区 (1).png"/></a>
 			<a href="play.html"><span>话题</span></div></a>
 		<div class="footer-item">
 			<img src="img/我的 (1).png"/>
