--- a/pos.html
+++ b/pos.html
@@ -2,8 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    	<meta name="format-detection" content="telephone=no, email=no" />
+    <meta name="format-detection" content="telephone=no, email=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"><meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="x5-fullscreen" content="true" />
+	<meta name="full-screen" content="yes">
+	<meta name="x5-orientation" content="portrait" />
+	<meta name="screen-orientation" content="portrait"> 
     <title>app</title>
      <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
@@ -65,15 +69,15 @@
 	<div class="footer">
 		<div class="footer-item">
 			<a href="index.html"><img src="img/订阅 (1).png"/></a>
-			<a href="index.html"><span>订阅</span></a><
+			<a href="index.html"><span>订阅</span></a>
 		</div>
 		<div class="footer-item footer-item-active">
 			<a href="pos.html"><img src="img/推荐 (1).png"/></a>
 			<a href="pos.html"><span>推荐</span></a>
 			</div>
 		<div class="footer-item">
-		<img src="img/社区.png"/>
-		<span>话题</span></div>
+			<a href="play.html"><img src="img/社区.png"/></a>
+			<a href="play.html"><span>话题</span></div></a>
 		<div class="footer-item">
 			<img src="img/我的 (1).png"/>
 			<span>我的</span></div>
