--- a/show.html
+++ b/show.html
@@ -2,8 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    	<meta name="format-detection" content="telephone=no, email=no" />
+    <meta name="format-detection" content="telephone=no, email=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"><meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="x5-fullscreen" content="true" />
+	<meta name="full-screen" content="yes">
+	<meta name="x5-orientation" content="portrait" />
+	<meta name="screen-orientation" content="portrait"> 
     <title>app</title>
      <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
