--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="header">
 		<div class="header-item" style="font-size: 0.26rem;">获取天气</div>
 		<div class="header-item">订阅</div>
-		<div class="header-item iconfont">&#xe606;</div>
+		<div class="header-item iconfont"><a href="search.html">&#xe606;</a></div>
 	</div>
 	<div class="swiper-container">
     	<div class="swiper-wrapper">
@@ -43,29 +43,29 @@
 	<div class="main">
 		<div class="main-box">
 			<div class="item">
-				<a href="pos.html"><img src="img/今日.png" alt="" /></a>
+				<a href="list.html"><img src="img/今日.png" alt="" /></a>
 				<span>今日看点</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/头条.png" alt="" /></a><span>头条热点</span></div>
+				<a href="list.html"><img src="img/头条.png" alt="" /></a><span>头条热点</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/娱乐八卦.png" alt="" /></a><span>娱乐八卦</span></div>
+				<a href="list.html"><img src="img/娱乐八卦.png" alt="" /></a><span>娱乐八卦</span></div>
 		</div>
 		<div class="main-box">
 			<div class="item">
-				<a href="pos.html"><img src="img/科技.png" alt="" /></a><span>科技频道</span></div>
+				<a href="list.html"><img src="img/科技.png" alt="" /></a><span>科技频道</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/汽车.png" alt="" /></a><span>汽车频道</span></div>
+				<a href="list.html"><img src="img/汽车.png" alt="" /></a><span>汽车频道</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/跑步.png"/></a><span>体育频道</span></div>
+				<a href="list.html"><img src="img/跑步.png"/></a><span>体育频道</span></div>
 		</div>
 				<div class="main-box">
 			<div class="item">
-				<a href="pos.html"><img src="img/电影 (1).png" alt="" /></a>
+				<a href="list.html"><img src="img/电影 (1).png" alt="" /></a>
 				<span>电影资讯</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/美妆.png" alt="" /></a><span>时尚频道</span></div>
+				<a href="list.html"><img src="img/美妆.png" alt="" /></a><span>时尚频道</span></div>
 			<div class="item">
-				<a href="pos.html"><img src="img/美食.png" alt="" /></a><span>美食频道</span></div>
+				<a href="list.html"><img src="img/美食.png" alt="" /></a><span>美食频道</span></div>
 		</div> 
 	</div>
 	<div class="footer">
