--- a/list.html
+++ b/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="width:100%;height: 100%;">
 <head>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no, email=no" />
@@ -16,75 +16,41 @@
     <script src="js/swiper.jquery.min.js"></script>
     <script src="js/swiper.animate1.0.2.min.js"></script>
 </head>
-<body>
-	<div class="header">
-		<div class="header-item"></div>
-		<div class="header-item">推荐</div>
-		<div class="header-item iconfont">&#xe606;
-		</div>
+<body style="width:100%;height: 100%;">
+	<div class="list-header">
+		<img src="img/今日.png"/ style="height:0.6rem;">
+		<b>今日看点</b>
+		<span >TODAY</span>
 	</div>
-	<div class="main-con">
-		<div class="list">
+	<div class="main-con list-con">
+		<div class="list-wrap">
+			<img src="img/003.jpg" alt="" />
+			<a href="show.html"><h2>什么环境中孩子智商较高？</h2></a>
+		</div>
+		<div class="list-wrap">
 			<a href="show.html"><h2>什么环境中孩子智商较高？</h2></a>
 			<h3>凤凰亲子<span style="margin-left: 20px;">刚刚</span></h3>
 		</div>
-		<div class="list">
-			<a href="show.html"><h2>什么环境中孩子智商较高？</h2></a>
-			<h3>凤凰亲子<span style="margin-left: 20px;">刚刚</span></h3>
-			<div class="con-img">
-				<img src="img/003.jpg" alt="" />
-			</div>
-		</div>
-		<div class="list">
-			<a href="show.html"><h2>什么环境中孩子智商较高？</h2></a>
-			<h3>凤凰亲子<span style="margin-left: 20px;">刚刚</span></h3>
-			<div class="img-box">
-			<a href="" class="item-img"><img src="img/01.jpg" alt="" /></a>
-			<a href="" class="item-img"><img src="img/003.jpg" alt="" /></a>
-			<a href="" class="item-img"><img src="img/004.jpg" alt="" /></a>
-			</div>
-			</div>
-		<div class="list">
+		<div class="list-wrap">
 			<a href="show.html"><h2>什么环境中孩子智商较高？</h2></a>
 			<h3>凤凰亲子<span style="margin-left: 20px;">刚刚</span></h3>
 		</div>
-		<div class="list">
+		<div class="list-wrap">
 			<a href="show.html"><h2>什么环境中孩子智商较高？</h2></a>
 			<h3>凤凰亲子<span style="margin-left: 20px;">刚刚</span></h3>
-			<div class="con-img">
-				<img src="img/003.jpg" alt="" />
-			</div>
 		</div>
-		<div class="list">
+		<div class="list-wrap">
 			<a href="show.html"><h2>什么环境中孩子智商较高？</h2></a>
 			<h3>凤凰亲子<span style="margin-left: 20px;">刚刚</span></h3>
-			<div class="img-box">
-				<a href="" class="item-img"><img src="img/01.jpg" alt="" /></a>
-				<a href="" class="item-img"><img src="img/003.jpg" alt="" /></a>
-				<a href="" class="item-img"><img src="img/004.jpg" alt="" /></a>
-			</div>
-			
 		</div>
-	</div>
-	<div class="footer">
-		<div class="footer-item">
-			<a href="index.html"><img src="img/订阅 (1).png"/></a>
-			<a href="index.html"><span>订阅</span></a>
+		<div class="list-wrap">
+			<a href="show.html"><h2>什么环境中孩子智商较高？</h2></a>
+			<h3>凤凰亲子<span style="margin-left: 20px;">刚刚</span></h3>
 		</div>
-		<div class="footer-item footer-item-active">
-			<a href="pos.html"><img src="img/推荐 (1).png"/></a>
-			<a href="pos.html"><span>推荐</span></a>
-			</div>
-		<div class="footer-item">
-			<a href="play.html"><img src="img/社区.png"/></a>
-			<a href="play.html"><span>话题</span></div></a>
-		<div class="footer-item">
-			<img src="img/我的 (1).png"/>
-			<span>我的</span></div>
 	</div>
 </body>
 <script src="js/public.js"></script>
 <script type="text/javascript">
-    resize(750);
+    resize(1334,"y");
 </script>
 </html>
