--- a/list.html
+++ b/list.html
@@ -4,12 +4,10 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no, email=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"><meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="x5-fullscreen" content="true" />
-	<meta name="full-screen" content="yes">
 	<meta name="x5-orientation" content="portrait" />
 	<meta name="screen-orientation" content="portrait"> 
     <title>app</title>
-     <link rel="stylesheet" href="css/swiper.min.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/jquery.js"></script>
@@ -18,7 +16,7 @@
 </head>
 <body style="width:100%;height: 100%;">
 	<div class="list-header">
-		<img src="img/今日.png"/ style="height:0.6rem;">
+		<img src="img/jr.png"/ style="height:0.6rem;">
 		<b>今日看点</b>
 		<span >TODAY</span>
 	</div>
@@ -50,7 +48,13 @@
 	</div>
 </body>
 <script src="js/public.js"></script>
+<script src="js/mui.js"></script>
 <script type="text/javascript">
     resize(1334,"y");
+    
+    mui('.list-con').on( 'tap' , 'a' , function(){
+		location.href="show.html";
+		console.log("ok")
+	} )
 </script>
 </html>
