--- a/play.html
+++ b/play.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no, email=no" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"><meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <meta name="x5-fullscreen" content="true" />
-	<meta name="full-screen" content="yes">
 	<meta name="x5-orientation" content="portrait" />
 	<meta name="screen-orientation" content="portrait"> 
     <title>app</title>
@@ -15,14 +13,16 @@
     <script src="js/jquery.js"></script>
     <script src="js/swiper.jquery.min.js"></script>
     <script src="js/swiper.animate1.0.2.min.js"></script>
+    <script src="js/iscroll.js"></script>
 </head>
-<body>
+<body onload="loaded()">
 	<div class="header">
 		<div class="header-item"></div>
 		<div class="header-item">玩乐</div>
-		<div class="header-item iconfont">&#xe606;
-		</div>
+		<div class="header-item iconfont" style="font-size: 0.32rem;"><a href="javascript:;">&#xe606;</a></div>
 	</div>
+	<div id="wrapper">
+	<div id="scroller">
 	<div class="swiper-container">
     	<div class="swiper-wrapper">
         	<div class="swiper-slide">
@@ -71,26 +71,29 @@
 				</a>
 		</div>
 	</div>
+		</div>
+			</div>
 	<div class="footer">
 		<div class="footer-item">
-			<a href="index.html"><img src="img/订阅 (1).png"/></a>
-			<a href="index.html"><span>订阅</span></a><
-		</div>
+			<div class="iconfont">&#xe60c;</div>
+			<span>订阅</span></div>
 		<div class="footer-item">
-			<a href="pos.html"><img src="img/推荐 (2).png"/></a>
-			<a href="pos.html"><span>推荐</span></a>
+			<div class="iconfont">&#xe613;</div>
+			<span>推荐</span>
 			</div>
-		<div class="footer-item footer-item-active">
-			<a href="play.html"><img src="img/社区 (1).png"/></a>
-			<a href="play.html"><span>话题</span></div></a>
+		<div class="footer-item  footer-item-active">
+			<div class="iconfont">&#xe600;</div>
+			<span>话题</span></div>
 		<div class="footer-item">
-			<img src="img/我的 (1).png"/>
-			<span>我的</span></div>
+			<div class="iconfont">&#xe62c;</div>
+			<span>我的</span>
+		</div>
 	</div>
 </body>
 <script src="js/public.js"></script>
+<script src="js/mui.js"></script>
 <script type="text/javascript">
-    resize(750);
+    resize(1334,"y");
     var mySwiper = new Swiper ('.swiper-container', {
         pagination: '.swiper-pagination',
         onInit: function(swiper){ //Swiper2.x的初始化是onFirstInit
@@ -101,5 +104,47 @@
             swiperAnimate(swiper); //每个slide切换结束时也运行当前slide动画
         }
     })
+     
+    var myScroll;
+
+	function loaded () {
+		myScroll = new IScroll('#wrapper', { mouseWheel: true, tap: true });
+	}
+	
+	document.addEventListener('touchmove', function (e) { e.preventDefault(); }, false);
+	
+	
+	
+	    mui.init();
+      	//tap为mui封装的单击事件，可参考手势事件章节
+	$(".footer-item").eq(0).on('tap', function() {
+		  //打开关于页面
+		mui.openWindow({
+		    url: 'index.html'
+		});
+	});
+	$(".footer-item").eq(1).on('tap', function() {
+		  //打开关于页面
+		mui.openWindow({
+		    url: 'pos.html'
+		});
+	});
+	$(".footer-item").eq(3).on('tap', function() {
+		  //打开关于页面
+		mui.openWindow({
+		    url: 'my.html'
+		});
+	});
+	$(".header-item").eq(2).on('tap', function() {
+		  //打开关于页面
+		mui.openWindow({
+		    url: 'search.html'
+		});
+	});
+	
+	mui('.img-list').on( 'tap' , 'a' , function(){
+		location.href="show.html";
+		console.log("ok")
+	} )
 </script>
 </html>
